update-html-and-css

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="Enter city name" spellcheck="false">
+            <button><img src="assets/search.png" alt="search"></button>
+        </div>
+        <div class="weather">
+            <img src="assets/rain.png" class="weather-icon" alt="rain">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">New York</h2>
+        </div>
+    </div>
 </body>
 </html>
