--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -12,6 +12,11 @@
             <input type="text" placeholder="Enter city name" spellcheck="false">
             <button><img src="assets/search.png" alt="search"></button>
         </div>
+
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
+
         <div class="weather">
             <img src="assets/rain.png" class="weather-icon" alt="rain">
             <h1 class="temp">22°c</h1>
@@ -35,43 +40,6 @@
         </div>
     </div>
 
-    <script>
-
-        const apiKey = "5a781696cd65e4cd40d35e47a9e72ec5";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
-
-        const searchBox = document.querySelector(".search input");
-        const searchBtn = document.querySelector(".search button");
-        const weatherIcon = document.querySelector(".weather-icon")
-
-        async function checkWeather(city){
-            const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
-            var data = await response.json();
-
-            console.log(data);
-
-            document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
-            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-            document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
-
-            if(data.weather[0].main == "Clouds"){
-                weatherIcon.src = "assets/clouds.png"
-            } else if(data.weather[0].main == "Clear"){
-                weatherIcon.src = "assets/clear.png"
-            } else if(data.weather[0].main == "Rain"){
-                weatherIcon.src = "assets/rain.png"
-            } else if(data.weather[0].main == "Drizzle"){
-                weatherIcon.src = "assets/drizzle.png"
-            } else if(data.weather[0].main == "Mist"){
-                weatherIcon.src = "assets/mist.png"
-            }
-        }
-
-    searchBtn.addEventListener("click", ()=>{
-        checkWeather(searchBox.value);
-    })
-
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
