--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote of the Day</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     
+    <div class="quote-box">
+        <h2>Quote of the day</h2>
+        <blockquote>Loading...</blockquote>
+        <span>Loading...</span>
+    </div>
+
+
 </body>
 </html>
