--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -11,14 +11,15 @@
     
     <div class="quote-box">
         <h2>Quote of the day</h2>
-        <blockquote>Loading...</blockquote>
-        <span>Loading...</span>
+        <blockquote id="quote">Loading...</blockquote>
+        <span id="author">Loading...</span>
         <div>
-            <button>New Quote</button>
-            <button>Tweet</button>
+            <button onclick="getquote(api_url)">New Quote</button>
+            <button onclick="tweet()"><img src="./assets/twitter-icon.png" alt="twitter icon">Tweet</button>
         </div>
     </div>
 
+    <script src="script.js"></script>
 
 </body>
 </html>
