--- a/to-do-list-app/index.html
+++ b/to-do-list-app/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="todo-app">
+            <h2>To-Do List <img src="assets/icon.png" alt="icon"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text">
+                <button>Add</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
