--- a/digital-clock/index.html
+++ b/digital-clock/index.html
@@ -10,7 +10,11 @@
     <div class="hero">
         <div class="container">
             <div class="clock">
-                00:00:00
+                <span id="hours">00</span>
+                <span>:</span>
+                <span id="minutes">00</span>
+                <span>:</span>
+                <span id="seconds">00</span>
             </div>
         </div>
     </div>
