--- a/portfolio-welcome-page/index.html
+++ b/portfolio-welcome-page/index.html
@@ -10,7 +10,14 @@
 <body>
     
     <header>
+        <h2 class="logo">Gregorius<span>Geraldin</span></h2>
 
+        <ul class="list-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </header>
 
     <main>
@@ -20,6 +27,6 @@
     <footer>
 
     </footer>
-    
+
 </body>
 </html>
