--- a/portfolio-welcome-page/index.html
+++ b/portfolio-welcome-page/index.html
@@ -13,7 +13,7 @@
         <h2 class="logo">Gregorius<span>Geraldin</span></h2>
 
         <ul class="list-menu">
-            <li><a href="#">Home</a></li>
+            <li><a class="active" href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Contact</a></li>
