--- a/portfolio-welcome-page/index.html
+++ b/portfolio-welcome-page/index.html
@@ -21,7 +21,23 @@
     </header>
 
     <main>
+        <div class="left">
+            <h2 class="hello-text">Hello, I'm</h2>
+            <h1 class="name-text">Gregorius Geraldin</h1>
+            <h2 class="role-text">
+                <span>Web Developer</span>
+            </h2>
 
+            <div class="list-button">
+                <button class="download-cv">Download CV</button>
+                <button class="contact-me">Contact Me</button>
+            </div>
+        </div>
+
+        <section class="right">
+            <img class="blob-img" src="assets/blob.png" alt="">
+            <img class="rocket-img" src="assets/rocket.png" alt="">
+        </section>
     </main>
 
     <footer>
