--- a/portfolio-welcome-page/index.html
+++ b/portfolio-welcome-page/index.html
@@ -41,7 +41,9 @@
     </main>
 
     <footer>
-
+        <a href="#"><i class='bx bxl-facebook'></i></a>
+        <a href="#"><i class='bx bxl-linkedin' ></i></a>
+        <a href="#"><i class='bx bxl-instagram' ></i></a>
     </footer>
 
 </body>
