build media responsive

--- a/portfolio-welcome-page/index.html
+++ b/portfolio-welcome-page/index.html
@@ -12,6 +12,15 @@
     <header>
         <h2 class="logo">Gregorius<span>Geraldin</span></h2>
 
+        <!-- START MOBILE SCREEN -->
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+            <i class='bx bx-menu-alt-right'></i>
+            <i class='bx bx-x' ></i>
+        </label>
+            
+        <!-- END MOBILE SCREEN -->
+
         <ul class="list-menu">
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">About</a></li>
