add switch role

--- a/portfolio-welcome-page/index.html
+++ b/portfolio-welcome-page/index.html
@@ -35,6 +35,8 @@
             <h1 class="name-text">Gregorius Geraldin</h1>
             <h2 class="role-text">
                 <span>Web Developer</span>
+                <span>App Developer</span>
+                <span>UI Designer</span>
             </h2>
 
             <div class="list-button">
