--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -9,11 +9,11 @@
 <body>
     <main>
         <header id="header">
-            <div class="player player-active" id="xPlayerDisplay">
+            <div class="player player-active" id="xPlayerDisplay" onclick="choosePlayer('X')">
                 X
             </div>
             <h3 id="titleHeader">Choose</h3>
-            <div class="player" id="oPlayerDisplay">
+            <div class="player" id="oPlayerDisplay" onclick="choosePlayer('O')">
                 O
             </div>
         </header>
