add computer choice function

--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -42,7 +42,7 @@
             </div>
             
             <div class="option-wrapper">
-                <button class="choice-btn" value="Scissors">
+                <button class="choice-btn" value="scissors">
                     ✌️
                 </button>
                 <h3 class="choice-label">Scissors</h3>
