--- a/calculator/index.html
+++ b/calculator/index.html
@@ -70,7 +70,7 @@
                 +
             </button>
 
-            <button onclick="tapNum('0')">
+            <button onclick="tapNum('0')" class="nol-btn">
                 0
             </button>
             <button onclick="tapNum('.')">
