--- a/portfolio-welcome-page/index.html
+++ b/portfolio-welcome-page/index.html
@@ -46,8 +46,8 @@
         </div>
 
         <section class="right">
-            <img class="blob-img" src="assets/blob.png" alt="">
-            <img class="rocket-img" src="assets/rocket.png" alt="">
+            <img class="blob-img" src="assets/background.png" alt="">
+            <img class="rocket-img" src="assets/to-the-stars.png" alt="">
         </section>
     </main>
 
