--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -12,7 +12,7 @@
             <div class="player player-active" id="xPlayerDisplay" onclick="choosePlayer('X')">
                 X
             </div>
-            <h3 id="titleHeader">Choose</h3>
+            <h3 id="titleHeader">Pick</h3>
             <div class="player" id="oPlayerDisplay" onclick="choosePlayer('O')">
                 O
             </div>
