--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -23,7 +23,7 @@
             <div class="divider-vertical"></div>
             <h4>Draw: <span class="score-draw-text">0</span></h4>
             <div class="divider-vertical"></div>
-            <h4>lost: <span class="score-lost-text">0</span></h4>
+            <h4>Lose: <span class="score-lost-text">0</span></h4>
         </section>
     
         <section class="options-choice">
