--- a/to-do-list-app/index.html
+++ b/to-do-list-app/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do List <img src="assets/icon.png" alt="icon"></h2>
+            <h2>To-Do List 📝</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add a task">
                 <button onclick="addTask()">Add</button>
