add player and cpu label

--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -13,10 +13,17 @@
         </header>
 
         <section class="results-display">
-            <h1 class="player-choice-text">✊</h1>
+            <div class="player-choice-container">
+                <h1 class="player-choice-text">✊</h1>
+                <span class="player-label">You</span> <!-- Added label -->
+            </div>
             <h1 class="versus-text">VS</h1>
-            <h1 class="cpu-choice-text">✊</h1>
+            <div class="cpu-choice-container">
+                <h1 class="cpu-choice-text">✊</h1>
+                <span class="cpu-label">CPU</span> <!-- Added label -->
+            </div>
         </section>
+        
     
         <section class="score-board">
             <h4>Wins: <span class="score-won-text">0</span></h4>
