add show up animation

--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -32,9 +32,9 @@
         </section>
     
         <section class="options-choice">
-            <button class="choice-btn" value="rock">✊</button>
-            <button class="choice-btn" value="paper">✋</button>
-            <button class="choice-btn" value="scissors">✌️</button>
+            <button id="option-rock" class="choice-btn" value="rock">✊</button>
+            <button id="option-paper" class="choice-btn" value="paper">✋</button>
+            <button id="option-scissors" class="choice-btn" value="scissors">✌️</button>
         </section>
     </main>
 
