add show up animation

--- a/digital-clock/index.html
+++ b/digital-clock/index.html
@@ -11,9 +11,9 @@
         <div class="container">
             <div class="clock">
                 <span id="hours">00</span>
-                <span>:</span>
+                <span id="divider-1">:</span>
                 <span id="minutes">00</span>
-                <span>:</span>
+                <span id="divider-2">:</span>
                 <span id="seconds">00</span>
             </div>
         </div>
